src/src/lexer.cpp
/* Generated by re2c 0.16 on Fri Jun 24 13:40:57 2016 */
#line 1 "src/src/lexer.re"
#include "lexer.h"
#include "parser.h"
#include <iostream>
#include "exceptions/syntax_exception.h"


int lexer::tokenize(const char * YYCURSOR, int len , lexeme_t* lexeme)
{


 	if (lexeme->current >= (YYCURSOR + len)) {
        return 0;
    }
    lexeme->start = lexeme->current;

    const char * YYMARKER;
	
	#define YYCTYPE		char
	#define YYFILL(n)	{}
    #define YYLIMIT		YYCURSOR+len
    #define YYCURSOR 	lexeme->current

	
#line 27 "<stdout>"
{
	YYCTYPE yych;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	case '\n':	goto yy8;
	case '!':	goto yy10;
	case '(':	goto yy12;
	case ')':	goto yy14;
	case ',':	goto yy16;
	case '-':	goto yy18;
	case '.':	goto yy20;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	case '=':	goto yy25;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy27;
	case '^':	goto yy30;
	case '{':	goto yy32;
	case '}':	goto yy34;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 30 "src/src/lexer.re"
	{ return 0; }
#line 117 "<stdout>"
yy4:
	++YYCURSOR;
#line 54 "src/src/lexer.re"
	{
									std::string str(--lexeme->current,0,1);

									throw syntax_exception("Syntax Error - Unexpected "+ str +"\n");
								}
#line 126 "<stdout>"
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy36;
	case 'v':	goto yy39;
	default:	goto yy7;
	}
yy7:
#line 52 "src/src/lexer.re"
	{ return PARSE_TOKEN_WS; }
#line 140 "<stdout>"
yy8:
	++YYCURSOR;
#line 53 "src/src/lexer.re"
	{ return PARSE_TOKEN_NEWLINE; }
#line 145 "<stdout>"
yy10:
	++YYCURSOR;
#line 50 "src/src/lexer.re"
	{ return PARSE_TOKEN_NEGATION;}
#line 150 "<stdout>"
yy12:
	++YYCURSOR;
#line 37 "src/src/lexer.re"
	{ return PARSE_TOKEN_LBRACKET; }
#line 155 "<stdout>"
yy14:
	++YYCURSOR;
#line 38 "src/src/lexer.re"
	{ return PARSE_TOKEN_RBRACKET; }
#line 160 "<stdout>"
yy16:
	++YYCURSOR;
#line 39 "src/src/lexer.re"
	{ return PARSE_TOKEN_COMMA; }
#line 165 "<stdout>"
yy18:
	++YYCURSOR;
#line 48 "src/src/lexer.re"
	{ return PARSE_TOKEN_MINUS;}
#line 170 "<stdout>"
yy20:
	++YYCURSOR;
#line 29 "src/src/lexer.re"
	{ return PARSE_TOKEN_DOT; }
#line 175 "<stdout>"
yy22:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	default:	goto yy24;
	}
yy24:
#line 31 "src/src/lexer.re"
	{ return PARSE_TOKEN_NUMBER; }
#line 196 "<stdout>"
yy25:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '>':	goto yy40;
	default:	goto yy26;
	}
yy26:
#line 36 "src/src/lexer.re"
	{ return PARSE_TOKEN_EQUAL; }
#line 206 "<stdout>"
yy27:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy27;
	default:	goto yy29;
	}
yy29:
#line 32 "src/src/lexer.re"
	{ return PARSE_TOKEN_STRING; }
#line 279 "<stdout>"
yy30:
	++YYCURSOR;
#line 40 "src/src/lexer.re"
	{ return PARSE_TOKEN_CONJUNCTION; }
#line 284 "<stdout>"
yy32:
	++YYCURSOR;
#line 35 "src/src/lexer.re"
	{ return PARSE_TOKEN_LPAREN; }
#line 289 "<stdout>"
yy34:
	++YYCURSOR;
#line 34 "src/src/lexer.re"
	{ return PARSE_TOKEN_RPAREN; }
#line 294 "<stdout>"
yy36:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy36;
	case 'v':	goto yy39;
	default:	goto yy38;
	}
yy38:
	YYCURSOR = YYMARKER;
	goto yy7;
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy42;
	default:	goto yy38;
	}
yy40:
	++YYCURSOR;
#line 33 "src/src/lexer.re"
	{ return PARSE_TOKEN_IMPLICATION; }
#line 323 "<stdout>"
yy42:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy42;
	default:	goto yy44;
	}
yy44:
#line 41 "src/src/lexer.re"
	{
									while(*(lexeme->start) != 'v') lexeme->start++;
									while(*(lexeme->current) != 'v') lexeme->current--;
									lexeme->current++; 
									return PARSE_TOKEN_DISJUNCTION;
								}
#line 343 "<stdout>"
}
#line 60 "src/src/lexer.re"



}